<resources>
    <string name="app_name">Android开发助手</string>
    <string name="float_ball">开启悬浮球</string>
    <string name="float_ball_on">开启悬浮球</string>
    <string name="float_ball_off">关闭悬浮球</string>

    <!-- developer -->
    <string name="developer_options">开发者选项</string>
    <string name="more">More</string>
    <string name="usb_debug">USB调试</string>
    <string name="keep_screen">保持唤醒状态</string>
    <string name="debug_layout">显示布局边界</string>
    <string name="debug_gpu_overdraw">调试GPU过度绘制</string>
    <string name="debug_gpu_profile">GPU呈现模式分析</string>
    <string name="debug_strict_mode">启用严格模式</string>
    <string name="debug_destroy_activity">不保留活动</string>
    <string name="debug_pointer_location">指针位置</string>
    <string name="debug_show_touches">触摸视觉反馈</string>

    <!-- network -->
    <string name="setting_network">网络设置</string>
    <string name="open_wifi">开启WiFi</string>
    <string name="close_wifi">关闭WiFi</string>
    <string name="turn_off_proxy">关闭代理</string>
    <string name="turn_on_proxy">开启代理</string>
    <string name="hint_proxy_host">Host</string>
    <string name="hint_proxy_port">Port</string>
    <string name="default_proxy_port">8888</string>

    <string name="app_debug">App调试</string>
    <string name="clear">Clear</string>
    <string name="restart">Restart</string>
    <string name="clear_and_restart">clear and restart</string>
    <string name="target_pkg">target debug package name</string>

    <!-- Hosts -->
    <string name="system_hosts">系统Hosts</string>
    <string name="add">添加</string>
    <string name="host_name">host方案名:</string>
</resources>
