<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/CategoryTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_network" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Switch
            android:id="@+id/proxySwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/turn_off_proxy"
            android:textOn="@string/turn_on_proxy" />

        <EditText
            android:id="@+id/et_host"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/hint_proxy_host"
            android:inputType="numberSigned" />

        <EditText
            android:id="@+id/et_port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_proxy_port"
            android:inputType="number"
            android:text="@string/default_proxy_port" />
    </LinearLayout>

</LinearLayout>