<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ToggleButton
            android:id="@+id/proxySwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/turn_off_proxy"
            android:textOn="@string/turn_on_proxy" />

        <EditText
            android:id="@+id/et_host"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/hint_proxy_host"
            android:inputType="textUri" />

        <EditText
            android:id="@+id/et_port"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hint_proxy_port"
            android:inputType="number"
            android:text="@string/default_proxy_port" />
    </LinearLayout>

    <GridView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:horizontalSpacing="20dp"
        android:numColumns="3"
        android:verticalSpacing="20dp"
        tools:listitem="@layout/item_dev" />
</LinearLayout>
